Fixed styling of main dashhboard to appear behind navbar

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -14,7 +14,6 @@
   height: 100%;
   position: inline-block;
   width: 13vw;
-  /* margin-right: 10px; */
   margin-top: 3px;
 }
 
@@ -48,6 +47,8 @@
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   box-shadow: 0 0 12px rgba(0,0,0,0.2);
+
+  z-index: -10;
 }
 
 .dashboard-main-center-top {
