--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 3px 17%;
+  z-index: 10;
   
   
 }
